fix: bulletin spacing

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,6 +50,10 @@ a {
     width: auto;
 }
 
+.m-auto {
+    margin: auto;
+}
+
 .shadow-none {
     box-shadow: none;
 }
